# raytracer-second-try

./: CMakeLists.txt  README.md  output.ppm
src/: camera.cpp  camera.h  colour.cpp  colour.h  constants.cpp  constants.h  dielectric.cpp  hittable.h  hittable_group.cpp  hittable_group.h  lambertian.cpp  main.cpp  material.h  metal.cpp  plane.cpp  plane.h  ray.h  solid_texture.cpp  sphere.cpp  sphere.h  texture.h  vec2.h  vec3.h
